--- a/style.css
+++ b/style.css
@@ -1,20 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700&family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Josefin+Slab:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Merriweather+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Mulish:ital,wght@0,300;0,400;1,200;1,300&display=swap');
 
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css");
+
+
 * {
     /*formata todas as propriedades iniciais*/
     margin: 0;
     padding: 0;
 }
 
+body{
+    width: 100%;
+    position: relative;
+}
 
 
-
-
-.corpoindex {
+.primeira {
     background-color: #F1FF4B;
     display: block;
 }
-
 
 .imglogo img {
     width: 35%;
@@ -65,7 +69,7 @@
     margin-left: 50px;
 }
 
-.barra {
+.barrafirst {
     width: 100%;
     height: 55px;
     background-color: #2D3277;
@@ -75,14 +79,14 @@
     font-family: "Josefin Sans";
 }
 
-.barra a {
+.barrafirst a {
     text-decoration: none;
     margin-top: 20px;
     margin: 21px;
     color: #F1FF4B;
 }
 
-.barra a:hover {
+.barrafirst a:hover {
     color: whitesmoke;
 }
 
@@ -92,11 +96,33 @@
     text-align: center;
     align-items: center;
     justify-content: center;
-    margin-top: 8%;
+    margin-top: 10%;
+    margin-bottom: 15%;
 }
 
+.barraeletronico {
+    width: 100%;
+    height: 55px;
+    background-color: #2D3277;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.5);
+    justify-content: space-evenly;
+    display: flex;
+    font-family: "Josefin Sans";
+    position: relative;
+}
 
-.corpoeletronico{
+.barraeletronico a {
+    text-decoration: none;
+    margin-top: 20px;
+    margin: 21px;
+    color: #F1FF4B;
+}
+
+.barraeletronico a:hover {
+    color: whitesmoke;
+}
+
+.corpoeletronico {
     background-color: #eee;
 }
 
@@ -157,6 +183,7 @@
     grid-column: 5 / 5;
     grid-row: 3 / 3;
 }
+
 .eletronico {
     margin: 43px;
     justify-content: center;
@@ -167,6 +194,33 @@
     font-family: "Baloo Da 2";
     text-align: center;
     font-size: 1.5rem;
+}
+
+.eletronico {
+    margin: 43px;
+    justify-content: center;
+    align-items: center;
+}
+
+.eletronico-text {
+    font-family: "Baloo Da 2";
+    text-align: center;
+    font-size: 1.5rem;
+    text-shadow: rgba(0, 0, 0, 1);
+}
+
+
+.eletronico img {
+    max-width: 100%;
+    -moz-transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+.eletronico:hover img {
+    -moz-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
 }
 
 .comprar {
@@ -184,7 +238,30 @@
     color: #878d41;
 }
 
-.corpoeletrodomes{
+
+.barraeletrodomestico {
+    width: 100%;
+    height: 55px;
+    background-color: #2D3277;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.5);
+    justify-content: space-evenly;
+    display: flex;
+    font-family: "Josefin Sans";
+    position: relative;
+}
+
+.barraeletrodomestico a {
+    text-decoration: none;
+    margin-top: 20px;
+    margin: 21px;
+    color: #F1FF4B;
+}
+
+.barraeletrodomestico a:hover {
+    color: whitesmoke;
+}
+
+.corpoeletrodomes {
     background-color: #eee;
 }
 
@@ -194,6 +271,7 @@
     grid-template-rows: repeat (3, 8rem);
     row-gap: 3rem;
     background-color: #eee;
+    margin-bottom: 3.5%;
 }
 
 .eletrodomestico:nth-child(1) {
@@ -245,6 +323,19 @@
     grid-column: 5 / 5;
     grid-row: 3 / 3;
 }
+
+.eletrodomestico {
+    margin: 43px;
+    justify-content: center;
+    align-items: center;
+}
+
+.eletrodomestico-text {
+    font-family: "Baloo Da 2";
+    text-align: center;
+    font-size: 1.5rem;
+}
+
 .eletrodomestico {
     margin: 43px;
     justify-content: center;
@@ -258,12 +349,49 @@
 }
 
 
+.eletrodomestico img {
+    max-width: 100%;
+    -moz-transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+.eletrodomestico:hover img {
+    -moz-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+.barraroupa {
+    width: 100%;
+    height: 55px;
+    background-color: #2D3277;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+    justify-content: space-evenly;
+    display: flex;
+    font-family: "Josefin Sans";
+    position: relative;
+}
+
+.barraroupa a {
+    text-decoration: none;
+    margin-top: 20px;
+    margin: 21px;
+    color: #F1FF4B;
+}
+
+.barraroupa a:hover {
+    color: whitesmoke;
+}
+
 .roupas {
     display: grid;
     grid-template-columns: repeat(5, 5fr);
     grid-template-rows: repeat (3, 8rem);
-    row-gap: 3rem;
+    row-gap: 2.5rem;
     background-color: #eee;
+    overflow: hidden;
+    margin-bottom: 2.4%;
 }
 
 .roupa:nth-child(1) {
@@ -315,6 +443,8 @@
     grid-column: 5 / 5;
     grid-row: 3 / 3;
 }
+
+
 .roupa {
     margin: 43px;
     justify-content: center;
@@ -328,4 +458,74 @@
 }
 
 
+.roupa img {
+    max-width: 100%;
+    -moz-transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+}
 
+.roupa:hover img {
+    -moz-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+
+footer {
+    /*propriedades do rodapé*/
+    width: 100%;
+    height: 5rem;
+    background-color: #000;
+    color: #1b3bdf;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: 0%;
+}
+
+.conteudorodape {
+    /*posição dos objetos no rodapé*/
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.conteudorodape p {
+    /*propriedades do conteudo no paragrafo do rodapé*/
+    font-family: "Baloo Da 2";
+    color: #8395ec;
+    font-size: 1.2rem;
+}
+
+
+.linktopo {
+    /*propriedades do botão voltar pro topo*/
+    position: fixed;
+    right: 3rem;
+    bottom: 2rem;
+    width: 3rem;
+    height: 3rem;
+    background: rgb(21, 52, 122);
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #4286f4, #373B44);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #4286f4, #373B44);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    color: #000;
+    border-radius: 25px;
+    box-shadow: 0 0.1rem 0.6rem #0000;
+}
+
+.linktopo:hover {
+    background: #fffc00;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #ffffff, #fffc00);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #ffffff, #fffc00);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
